CoqOfSolidity/test/libsolidity/syntaxTests/errors/error_in_library.v
(* Generated by coq-of-solidity *)
Require Import CoqOfSolidity.CoqOfSolidity.

(* Library *)
Module L.
  (* Error E *)
End L.
